KiddyVerse v2.0.3 - Complete UI Overhaul & Backend Migration
 Major Features:
- Migrated from Node.js to Python FastAPI backend
- Added frontend Tesseract.js for offline OCR
- Smart OCR method selection (printed vs handwritten)
- Dual API key system with automatic failover
- Student-friendly UI with colorful animations
- Enhanced tab visibility and prominence
- Mobile-first responsive design

 UI Improvements:
- Prominent colorful tabs with clear labels
- Reduced 'Start Over' button prominence
- Added magical animations and micro-interactions
- Rainbow gradients and sparkle effects
- Touch-optimized components for mobile

 Technical Enhancements:
- Frontend: React + Vite + Tesseract.js
- Backend: FastAPI + Gemini AI + Dual API keys
- Smart fallback: Tesseract fails  Gemini backup
- Session-based file storage
- Rate limiting and error handling
- Comprehensive deployment guide

 Student-Friendly Features:
- Large touch targets (44px+)
- Encouraging language throughout
- Visual feedback for all interactions
- Offline capability for printed text
- Grade-level appropriate summaries

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "kiddyverse-frontend",
+  "name": "kiddyverse-v2-frontend",
   "private": true,
-  "version": "0.1.0",
+  "version": "2.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,13 +9,14 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
-    "@formspree/react": "^3.0.0",
-    "pdfjs-dist": "^4.10.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tesseract.js": "^5.1.1"
   },
   "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "vite": "^5.3.3"
   }
 }
